git add weather_application/weather_app.ipynb git commit -m "update weather_app.ipynb"

--- a/weather_application/weather_app.ipynb
+++ b/weather_application/weather_app.ipynb
@@ -2,63 +2,52 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "0d18d285",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "403\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#weather_application\n",
     "from tkinter import *\n",
-    "from tkinter import messagebox\n",
     "import requests\n",
     "from tkinter import PhotoImage\n",
     "from geopy.geocoders import Nominatim\n",
-    "import openmeteo_requests\n",
-    "import json\n",
     "\n",
-    "\n",
-    "url = \"https://api.open-meteo.com/v1/forecast\"\n",
     "cor =  []\n",
-    "def coordinate(lati, long):\n",
-    "    city = city_entry.get().title().split(\",\")\n",
-    "    geolocator = Nominatim(user_agent=\"weather_app.ipynb\")\n",
-    "    location = geolocator.geocode(city)\n",
-    "    lati = print(location.latitude)\n",
-    "    long = print(location.longitude)\n",
-    "    cor.append(lati)\n",
-    "    cor.append(long)\n",
-    "        \n",
-    "def get_weather(params):\n",
-    "    params = {\n",
-    "        \"latitude\": cor[0],\n",
-    "        \"longitude\":cor[1],\n",
-    "        \"hourly\": \"temperature_2m\"\n",
-    "        }\n",
+    "#functions\n",
+    "def get_weather():\n",
+    "    if len(cor) != 2:\n",
+    "        return \"coordinates could not be received\"\n",
+    "    \n",
+    "    url = f\"https://api.open-meteo.com/v1/forecast?latitude={cor[0]}&longitude={cor[1]}&hourly=temperature_2m\"\n",
     "    response = requests.get(url)\n",
     "    data = response.json()\n",
+    "    \n",
+    "    try:\n",
+    "        temperature = data[\"hourly\"][\"temperature_2m\"][0]\n",
+    "        info_label.config(text=f\"temperature: {temperature}\")\n",
+    "    except:\n",
+    "        info_label.config(text=\"data could not be received\")\n",
     "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
+    "def coordinate():\n",
+    "    city = city_entry.get().title().split(\",\")\n",
+    "    geolocator = Nominatim(user_agent=\"weather_app\")\n",
+    "    location = geolocator.geocode(city)\n",
+    "    \n",
+    "    if location:\n",
+    "        cor.clear()\n",
+    "        cor.append(location.latitude)\n",
+    "        cor.append(location.longitude)\n",
+    "        get_weather()\n",
+    "    else:\n",
+    "        info_label.config(text=\"location could not be found\")\n",
+    "        \n",
+    "        \n",
+    "        \n",
+    "        \n",
+    "        \n",
+    "        \n",
+    "            \n",
     "#UI\n",
     "window = Tk()\n",
     "window.title(\"Weather Application\")\n",
@@ -74,34 +63,16 @@
     "city_entry = Entry(width=20)\n",
     "city_entry.pack()\n",
     "#city_search_button\n",
-    "city_search_button = Button(text=\"SEARCH\",)\n",
+    "city_search_button = Button(text=\"SEARCH\",command=coordinate)\n",
     "city_search_button.pack()\n",
+    "#info_label\n",
+    "info_label = Label(text=\"\")\n",
+    "info_label.pack()\n",
+    "\n",
+    "\n",
+    "\n",
     "\n",
     "window.mainloop()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "id": "e25e7244",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "200\n"
-     ]
-    }
-   ],
-   "source": [
-    "import requests\n",
-    "\n",
-    "url = \"https://api.open-meteo.com/v1/forecast\"\n",
-    "\n",
-    "response = requests.get(url)\n",
-    "print(response.status_code)\n",
-    "\n"
    ]
   }
  ],
