git commit git push origin main

--- a/selenium1/selenium1c.ipynb
+++ b/selenium1/selenium1c.ipynb
@@ -2,22 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "b56d7c69",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mKeyboardInterrupt\u001b[39m                         Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[15]\u001b[39m\u001b[32m, line 21\u001b[39m\n\u001b[32m     18\u001b[39m input_element.send_keys(Keys.ENTER)\u001b[38;5;66;03m#enter tuşuna basıyor.\u001b[39;00m\n\u001b[32m     20\u001b[39m \u001b[38;5;28;01mwhile\u001b[39;00m \u001b[38;5;28;01mTrue\u001b[39;00m:\n\u001b[32m---> \u001b[39m\u001b[32m21\u001b[39m     \u001b[38;5;28;01mcontinue\u001b[39;00m\n\u001b[32m     22\u001b[39m \u001b[38;5;66;03m#google bazen search buton kısmında sıkıntı çıkarabiliyor\u001b[39;00m\n\u001b[32m     23\u001b[39m \u001b[38;5;66;03m#normalde search butone tıklamak için:\u001b[39;00m\n\u001b[32m     24\u001b[39m \u001b[38;5;66;03m#search_button = driver.find_element(By.Name,\"btnk\")\u001b[39;00m\n\u001b[32m     25\u001b[39m \u001b[38;5;66;03m#search_button.click()#search butonuna tıkladık.\u001b[39;00m\n\u001b[32m     26\u001b[39m \u001b[38;5;66;03m# yada ikinci bir neden ise işlemin çok hızlı gerçekleşmesi\u001b[39;00m\n",
-      "\u001b[31mKeyboardInterrupt\u001b[39m: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from selenium import webdriver\n",
     "from selenium.webdriver.chrome.service import Service\n",
@@ -64,13 +52,15 @@
     "driver = webdriver.Chrome(service=Service(ChromeDriverManager().install()))\n",
     "driver.maximize_window()\n",
     "\n",
-    "driver.get(\"https://www.google.com/\")\n",
-    "WebDriverWait(driver, 4).until(expected_conditions.visibility_of_element_located((By.NAME, \"q\")))\n",
+    "driver.get(\"https://www.google.com/\")# sayfayı açtık\n",
+    "WebDriverWait(driver, 4).until(expected_conditions.visibility_of_element_located((By.NAME, \"q\")))#arama kısmı gözükene kadar maximum 4 saniye beklemesini söyledik\n",
     "\n",
     "input_element = driver.find_element(By.NAME,\"q\")\n",
-    "input_element.send_keys(\"atil samancioglu\")\n",
+    "input_element.send_keys(\"atil samancioglu\")# ardından arama kısmına yazdırdık.\n",
     "\n",
-    "search_button "
+    "search_button = driver.find_element(By.NAME, \"btnK\")# arama butonunu name ile bulduk.\n",
+    "WebDriverWait(driver, 4).until(expected_conditions.element_to_be_clickable((By.NAME, \"btnK\")))# arama butonu tıklanabilir olana kadar 4 saniye beklemesini söyledik.\n",
+    "search_button.click()#search butonuna tıklıyoruz"
    ]
   }
  ],
